borsh-derive/src/internals/deserialize/enums/snapshots/generic_borsh_skip_tuple_field.snap
---
source: borsh-derive/src/internals/deserialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Key, V, U> borsh::de::BorshDeserialize for A<K, V, U>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: ::core::default::Default,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl<K: Key, V, U> borsh::de::EnumExt for A<K, V, U>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: ::core::default::Default,
{
    fn deserialize_variant<__R: borsh::io::Read>(
        reader: &mut __R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let return_value = if variant_tag == 0u8 {
            A::B {
                x: <HashMap<
                    K,
                    V,
                > as borsh::BorshDeserialize>::deserialize_reader(reader)?,
                y: <String as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            A::C(
                <K as borsh::BorshDeserialize>::deserialize_reader(reader)?,
                ::core::default::Default::default(),
            )
        } else {
            return ::core::result::Result::Err(
                borsh::io::Error::new(
                    borsh::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        ::core::result::Result::Ok(return_value)
    }
}
